Fix issue where datepicker was covered by reviewer drop-down.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -653,6 +653,10 @@ ul li em {
   font-weight: bold;
 }
 
+#ui-datepicker-div {
+ z-index: 1000 !important;
+}
+
 #awesome-bar {
   position: fixed;
   top: 0;
